# cllama

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FindCppRESTSDK.cmake
include/cllama/: cllama.hpp  export.hpp
include/cllama/api/: config.hpp  cpprest_router.hpp  oatpp_router.hpp  router.hpp
include/cllama/core/: error.hpp  model.hpp  runner_mgr.hpp  session.hpp  types.hpp
include/cllama/platform/: os.hpp
include/cllama/platform/android/: os.hpp
include/cllama/platform/ios/: os.hpp
include/cllama/util/: cflag.hpp  log.hpp
scripts/: build.sh
src/: CMakeLists.txt
src/api/: config.cpp  cpprest_router.cpp  oatpp_router.cpp  router.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: model.cpp  runner_mgr.cpp
src/platform/: CMakeLists.txt  android.cpp  ios.cpp  linux.cpp  macos.cpp  windows.cpp
src/runner/: CMakeLists.txt  llama_runner.cpp
src/util/: log.cpp
tests/: CMakeLists.txt  test_api.cpp
